name: blocky
version: 0.0.1
synopsis: The blocky game
description: http://nifty.stanford.edu/2019/horton-liu-blocky-recursive-tree-game/
homepage: https://github.com/ironchicken/blocky
license: BSD3
license-file: LICENSE
author: Richard Lewis
maintainer: richard@rjlewis.me.uk
copyright: (C) 2019 Richard Lewis
category: Game
build-type: Simple
cabal-version: >=1.10

executable blocky
  main-is: Main.hs
  other-modules: Blocky.BlockTree
               , Blocky.GamePlay
               , Blocky.Interaction.Console
               , Blocky.Types
  build-depends: base
               , random
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -threaded -Wall

test-suite blocky-spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends: base
               , Cabal
               , hspec
               , HUnit
  other-modules: BlockTreeSpec
               , Blocky.BlockTree
               , Blocky.GamePlay
               , Blocky.Interaction.Console
               , Blocky.Types
  hs-source-dirs: tests
                , src
  default-language: Haskell2010
  ghc-options: -O2 -threaded -Wall
